--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,16 @@ body
     text-decoration: none;
     box-sizing:border-box;
 }
+.bold-color
+{
+    color: var(--skin-color);
+    font-size: 20px;
+    font-family: 'Clicker Script', cursive;
+}
 ::before,::after
 {
     box-sizing:border-box;
+    margin-bottom: 120px;
 }
 ul
 {
@@ -46,10 +53,37 @@ ul
     display: block;
     padding:0 30px;
     opacity: 1;
+    position: fixed;
+    left: 270px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: all 0.3s ease;
+
 }
-.main-content
+.section.back-section
 {
-    padding-left: 270px;
+    z-index: 1;
+}
+.section.active
+{
+    z-index: 2;
+    opacity: 1;
+    animation: slideSection 1s ease;
+}
+@keyframes slideSection
+{
+    0%
+    {
+        transform: translateX(100%);
+    }
+    100%
+    {
+        transform: translateX(0%);
+    }
 }
 .padd-15
 {
@@ -145,6 +179,7 @@ ul
     justify-content: center;
     align-items: center;
     z-index: 10;
+    transition: all 0.3s ease;
 }
 .aside .logo
 {
@@ -203,6 +238,7 @@ ul
     display:none;
     align-items: center;
     justify-content: center;
+    transition: all 0.3s ease;
 }
 .aside .nav-toggler span
 {
@@ -211,6 +247,10 @@ ul
     background: var(--skin-color);
     display:inline-block;
     position: relative;
+}
+.aside .nav-toggler.open span
+{
+    background-color: transparent;
 }
 .aside .nav-toggler span::before
 {
@@ -222,6 +262,11 @@ ul
     top:-6px;
     left:0;
 }
+.aside .nav-toggler.open span::before
+{
+    transform: rotate(45deg);
+    top: 0;
+}
 .aside .nav-toggler span::after
 {
     content:'';
@@ -231,6 +276,11 @@ ul
     position:absolute;
     top:6px;
     left:0;
+}
+.aside .nav-toggler.open span::after
+{
+    transform: rotate(-45deg);
+    top: 0;
 }
 .aside .nav
 {
@@ -275,6 +325,7 @@ h3.hello
 {
     font-size: 28px;
     margin : 15px 0;
+    display: inline;
 }
 h3.hello span
 {
@@ -304,7 +355,6 @@ h3.my-profession
     max-width : 40%;
     text-align:center;
     position: relative;
-
 }
 .home-img::after
 {
@@ -394,7 +444,6 @@ h3.my-profession
 }
 .about .about-content .personal-info .buttons .btn
 {
-    margin-right: 15px;
     margin-top: 10px;
 }
 .about .about-content .skills
@@ -721,13 +770,34 @@ h3.my-profession
 }
 @media(max-width:1199px)
 {
+    .section .container
+    {
+        padding-top: 70px;
+    }
     .aside
     {
         left: -270px;
     }
-    .main-content
+    .aside.open
     {
-        padding-left: 0;
+        left: 0;
+    }
+    .aside .nav-toggler
+    {
+        display: flex;
+        left: 30px;
+    }
+    .aside .nav-toggler.open
+    {
+        left: 300px;
+    }
+    .section
+    {
+        left: 0;
+    }
+    .section.open
+    {
+        left: 270px;
     }
     .about .about-content .personal-info .info-item p span
     {
@@ -768,6 +838,9 @@ h3.my-profession
         flex: 0 0 100%;
         max-width: 100%;
     }
+}
+.home-info p{
+    text-align: justify;
 }
 .hidden
 {
