--- a/css/style-switcher.css
+++ b/css/style-switcher.css
@@ -72,19 +72,19 @@
 }
 .style-switcher .color-2
 {
-    background: #fa5b0f;
+    background: #6A2C70;
 }
 .style-switcher .color-3
 {
-    background: #37b182;
+    background: #B83B5E;
 }
 .style-switcher .color-4
 {
-    background: #1854b4;
+    background: #F08A5D;
 }
 .style-switcher .color-5
 {
-    background: #f021b2;
+    background: #F9ED69;
 }
 .colors .color-1,.color-2,.color-3,.color-4,.color-5
 {
