--- a/css/style.css
+++ b/css/style.css
@@ -580,18 +580,18 @@ h3.my-profession
     text-align: justify;
     color: var(--text-black-700);
 }
-/* service*/
-.service .container
+/* project*/
+.project .container
 {
     padding-bottom: 40px;
 }
-.service .service-item
+.project .project-item
 {
     margin-bottom: 30px;
-    flex: 0 0 33.33%;
-    max-width: 33.33%;
+    flex: 0 0 40%;
+    max-width: 40%;
 }
-.service .service-item .service-item-inner
+.project .project-item .project-item-inner
 {
     background-color: var(--bg-black-100);
     border: 1px solid var(--bg-black-50);
@@ -599,38 +599,13 @@ h3.my-profession
     padding: 30px 15px;
     text-align: center;
     transition: all 0.3S ease;
+    
 }
-.service .service-item .service-item-inner:hover
+.project .project-item .project-item-inner:hover
 {
     box-shadow: 0 0 20px rgba(48,46,77,0.15);
 }
-.service .service-item .service-item-inner .icon
-{
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
-    display: block;
-    margin: 0 auto 30px;
-    text-align: center;
-    transition: all 0.3s ease;
-}
-.service .service-item .service-item-inner .icon .fa
-{
-    font-size: 40px;
-    line-height: 60px;
-    color: var(--skin-color);
-    transition: all 0.3s ease;
-}
-.service .service-item .service-item-inner:hover .icon
-{
-    background: var(--skin-color);
-}
-.service .service-item .service-item-inner:hover .icon .fa
-{
-    font-size: 25px;
-    color: #ffffff;
-}
-.service .service-item .service-item-inner h4
+.project .project-item .project-item-inner h4
 {
     font-size: 18px;
     margin-bottom: 15px;
@@ -638,44 +613,50 @@ h3.my-profession
     font-weight: 700;
     text-transform: capitalize;
 }
-.service .service-item .service-item-inner p
+.project .project-item .project-item-inner p
 {
     font-size: 16px;
     color: var(--text-black-700);
     line-height: 25px;
 }
-/*portfolio*/
-.portfolio .container
+/*result*/
+.result .container
 {
     padding-bottom: 40px;
 }
-.portfolio .portfolio-heading
+.result .result-heading
 {
     flex: 0 0 100%;
     max-width: 100%;
     margin-bottom: 40px;
 }
-.portfolio .portfolio-heading h2
+.result .result-heading h2
 {
     color: var(--text-black-900);
     font-weight: 500;
 }
-.portfolio .portfolio-item
+.result .result-item
 {
     flex: 0 0 33.33%;
     max-width: 33.33%;
     margin-bottom: 30px;
 }
-.portfolio .portfolio-item-inner
+.result .result-item-inner
 {
     border: 6px solid var(--bg-black-100);
     border-radius: 10px;
     overflow: hidden;
     cursor: pointer;
 }
-.portfolio .portfolio-item-inner .portfolio-img img
+.result .result-item-inner .result-img img
 {
     width: 100%;
+    display: block;
+}
+.result .result-item-inner .result-img video
+{
+    width: 100%;
+    height: 540.48;
     display: block;
 }
 /* contact */
@@ -808,8 +789,8 @@ h3.my-profession
 @media(max-width:991px)
 {
     .contact .contact-info-item,
-    .portfolio .portfolio-item,
-    .service .service-item
+    .result .result-item,
+    .project .project-item
     {
         flex: 0 0 50%;
         max-width: 50%;
@@ -828,8 +809,8 @@ h3.my-profession
 {
     .contact .contact-form .col-6,
     .contact .contact-info-item,
-    .portfolio .portfolio-item,
-    .service .service-item,
+    .result .result-item,
+    .project .project-item,
     .about .about-content .experience,
     .about .about-content .education,
     .about .about-content .skills,
