--- a/css/style.css
+++ b/css/style.css
@@ -653,12 +653,12 @@ h3.my-profession
     width: 100%;
     display: block;
 }
-.result .result-item-inner .result-img video
+/* .result .result-item-inner .result-img video
 {
     width: 100%;
     height: 540.48;
     display: block;
-}
+} */
 /* contact */
 .contact-title
 {
